[package]
name = "cargo-explain"
version = "1.0.0"
authors = ["Jess Bees <hi@toomanybees.com>"]
edition = "2018"
description = "A syntax highlighting replacement for rustc --explain"
license = "MIT"
homepage = "https://github.com/TooManyBees/cargo-explain"
repository = "https://github.com/TooManyBees/cargo-explain"

[dependencies]
markdown = "0.3.0"
syntect = { version = "4.4.0", default-features = false, features = [ "parsing", "assets", "dump-load", "regex-onig" ] }
ansi_term = "0.12.1"
textwrap = "0.12.1"
atty = "0.2.14"
